--- a/index.html
+++ b/index.html
@@ -109,25 +109,20 @@
                     <h2 class="title">My Story</h2>
 
                     <div class="about-content">
-                        <p class="orange-text">
-                            Thank you for taking your time to view my resume. I want to tell you, in few words, some
-                            of my winning points into my carrier.<br /><br />
+                        <p class="orange-text">Thank you for taking the time to review my resume. I would like to briefly highlight some of the key achievements in my career.
                         </p>
 
-                        <p>
-                            When I worked on Yonder (formerly Nethrom), a client (which deals with organization of
-                            business meetings) wanted to convert an Excel spreadsheet into a web application. I developed the application from scratch, I optimized the meeting times using backtracking algorithms, finally I was able to help the client to
-                            increase its profits by more than 300% in less than an year.
-                            <br /><br />
-                            Other interesting project was on Smartcrew, where I worked for a telecom company. Here I developed a web application which is used today to distribute the marketing materials from the company headquarters to the marketing departments from countries where the company have a business.
-                            <br /><Br />
-                            Another interesting project, for the same client, was a web application where the client was able to manage routes for his agents and optimize them. On this project I worked in a team with another PHP programmer and with a few IOS and Android developers.
-                            <br /><br />
-                            Another project I worked on with pleasure was one in which I used Python. The project consisted of taking information from several APIs (either SOAP or RESTful) and then comparing the data and finally obtaining a database with consistent information without duplicates (it was about more than 50 million records). Then this database became accessible via the RESTful API. This project was developed for a US client.
-                            <br /><br />
-                            I would like to mention the last projects I participated in, a project for the energy industry, where I worked as a senior developer on the backend and API side (was used SOAP and REST API); another project for travel industry, where I worked as developer on the RESTful API and on the backend. 
-                            <br /><br />
-                            Right now I work on big project for an US company, as Senior Python Payment developer. My main role is to update and maintain the coding part for the payment and to do fraud analysis using different tools.
+                        <p>When I worked at Yonder (formerly Nethrom), a client (specializing in the organization of business meetings) wanted to convert an Excel spreadsheet into a web application. I developed the application from scratch, optimizing meeting times using backtracking algorithms. Ultimately, I helped the client increase their profits by more than 300% in less than a year.
+                        </p>    
+                        <p>Another interesting project was with Smartcrew, where I worked for a telecom company. Here, I developed a web application that is still used today to distribute marketing materials from the company headquarters to the marketing departments in the countries where the company operates.
+                        </p>
+                        <p>For the same client, I also worked on a web application that enabled the client to manage and optimize routes for their agents. On this project, I collaborated with another PHP programmer and several iOS and Android developers.
+                        </p>
+                        <p>One project I particularly enjoyed involved using Python. The project entailed gathering information from several APIs (both SOAP and RESTful), comparing the data, and creating a database with consistent, duplicate-free information (comprising over 50 million records). This database was then made accessible via a RESTful API. This project was developed for a US client.
+                        </p>
+                        <p>I'd also like to mention the last few projects I participated in: a project for the energy industry, where I worked as a senior developer focusing on the backend and API side (using both SOAP and REST APIs); and another project for the travel industry, where I worked as a developer on the RESTful API and backend.
+                        </p>
+                        <p>Currently, I am working on a large project for a US company as a Senior Python Payment Developer. My main responsibilities include updating and maintaining the payment coding part and conducting fraud analysis using various tools.
                         </p>
                     </div>
                     <!-- /.about-content -->
