--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
 <script src="assets/js/jquery.parallax.js"></script>
 <script src="assets/js/chart.min.js"></script>
 <script src='assets/js/isotope.pkgd.min.js'></script>
-<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script src="https://maps.google.com/maps/api/js?sensor=true"></script>
 <script src='assets/js/gmaps.js'></script>
 <script src="assets/js/scrollReveal.js"></script>
 <script src="assets/js/custom.js"></script>
