--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
                     <div class="progress">
                         <div class="progress-bar pro-skills skill-red" role="progressbar" aria-valuenow="60"
                              aria-valuemin="0" aria-valuemax="100" data-progress="10%">
-                            Perl and Bash scripting
+                            Flutter & Dart
                         </div>
-                        <span class="skill-width">25%</span>
+                        <span class="skill-width">65%</span>
                     </div>
                     <!-- /.progress -->
 
@@ -315,7 +315,7 @@
                     <div class="progress">
                         <div class="progress-bar pro-skills skill-red" role="progressbar" aria-valuenow="60"
                              aria-valuemin="0" aria-valuemax="100" data-progress="60%">
-                             FastAPI, Falcon
+                             FastAPI,Falcon
                         </div>
                         <span class="skill-width">60%</span>
                     </div>
@@ -324,7 +324,7 @@
                     <div class="progress">
                         <div class="progress-bar pro-skills skill-green" role="progressbar" aria-valuenow="60"
                              aria-valuemin="0" aria-valuemax="100" data-progress="65%">
-                             Symfony, Laravel
+                             Symfony,Laravel
                         </div>
                         <span class="skill-width">65%</span>
                     </div>
@@ -893,16 +893,16 @@
             label: "Adobe Illustrator"
         },
         {
-            value: 100,
+            value: 75,
             color: "#FDB45C",
             highlight: "#FFC870",
-            label: "Adobe Fireworks"
+            label: "Figma"
         },
         {
             value: 60,
             color: "#949FB1",
             highlight: "#A8B3C5",
-            label: "Corel Draw"
+            label: "Canva"
         },
         {
             value: 70,
