--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
                     <div class="progress">
                         <div class="progress-bar pro-skills skill-red" role="progressbar" aria-valuenow="60"
-                             aria-valuemin="0" aria-valuemax="100" data-progress="10%">
+                             aria-valuemin="0" aria-valuemax="100" data-progress="65%">
                             Flutter & Dart
                         </div>
                         <span class="skill-width">65%</span>
@@ -292,12 +292,12 @@
 
             <div class="col-md-4" data-scroll-reveal="enter from the left after .5s">
                 <div class="programing-skills bar-charts section-box">
-                    <h2 class="box-title">Frameworks Skills</h2>
+                    <h2 class="box-title">Backend Frameworks Skills</h2>
 
                     <div class="progress">
                         <div class="progress-bar pro-skills skill-violet" role="progressbar" aria-valuenow="60"
                              aria-valuemin="0" aria-valuemax="100" data-progress="80%">
-                            Yii, Codeigniter
+                            Yii,Codeigniter
                         </div>
                         <span class="skill-width">80%</span>
                     </div>
@@ -306,7 +306,7 @@
                     <div class="progress">
                         <div class="progress-bar pro-skills skill-blue" role="progressbar" aria-valuenow="60"
                              aria-valuemin="0" aria-valuemax="100" data-progress="65%">
-                             Django, Flask
+                             Django,Flask
                         </div>
                         <span class="skill-width">65%</span>
                     </div>
@@ -503,7 +503,35 @@
                 </div>
                 <!-- /.experience-item -->
 
+                <div class="experience-item" data-scroll-reveal="enter from the bottom over .5s">
+                    <div class="name-designation">
+                        <h3 class="designation">Senior Payment Python Developer</h3>
 
+                        <p class="name-of-org">American Greetings</p>
+                    </div>
+                    <!-- /.name-designation -->
+
+                    <div class="stay-time light-blue">
+                        <p>
+                            2021 <br/>
+                            - <br/>
+                            2024
+                        </p>
+                    </div>
+                    <!-- /.stay-time -->
+
+                    <div class="comments" data-scroll-reveal="enter from the right after .5s">
+                        <p>Developing and maintaining payment application. Working with Python, Oracle database.</p>
+                        <p>
+                            Here, I focus on making our payment system better and keeping it running smoothly. This involves a significant upgrade, shifting from SOAP/XML to the more dynamic JSON format, seamlessly integrated with the latest API version from our banking partner. 
+                        </p>
+                        <p>
+                            I'm also responsible for monitoring and keeps an eye out for any hiccups in the payment system, as well as addressing any suspicious or fraudulent activity that occur on the company's online platforms.
+                        </p>
+                    </div>
+                    <!-- /.comments -->
+                </div>
+                <!-- /.experience-item -->
 
 
                 <div class="experience-item" data-scroll-reveal="enter from the bottom over .5s">
