--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                     <!-- /.stay-time -->
 
                     <div class="comments" data-scroll-reveal="enter from the right after .5s">
-                        <p>I developed websites, installed/maintained web/mail servers with different control panels, managed servers/vps, I offered technical support for servers/web apps/Macs. I setup domains. I installed ssl certificates. I installed/maintained/moved MySQL databases. I coordinated small teams of developers when was needed. I supervised junior developers when was needed. I made code reviews.</p>
+                        <p>I developed websites, installed and maintained web/mail servers with different control panels, managed servers/VPS, and offered technical support for servers, web apps, and Macs. I set up domains and installed SSL certificates. I installed, maintained, and migrated MySQL databases. I coordinated small teams of developers when needed and supervised junior developers as required. I also conducted code reviews.</p>
                     </div>
                     <!-- /.comments -->
                 </div>
@@ -521,12 +521,12 @@
                     <!-- /.stay-time -->
 
                     <div class="comments" data-scroll-reveal="enter from the right after .5s">
-                        <p>Developing and maintaining payment application. Working with Python, Oracle database.</p>
+                        <p>Developing and maintaining a payment application using Python and Oracle database.</p>
                         <p>
-                            Here, I focus on making our payment system better and keeping it running smoothly. This involves a significant upgrade, shifting from SOAP/XML to the more dynamic JSON format, seamlessly integrated with the latest API version from our banking partner. 
+                            Here, I focus on improving our payment system and ensuring it runs smoothly. This involves a significant upgrade, shifting from SOAP/XML to the more dynamic JSON format, seamlessly integrated with the latest API version from our banking partner.
                         </p>
                         <p>
-                            I'm also responsible for monitoring and keeps an eye out for any hiccups in the payment system, as well as addressing any suspicious or fraudulent activity that occur on the company's online platforms.
+                            I'm also responsible for monitoring the payment system for any issues, as well as addressing any suspicious or fraudulent activity that occurs on the company's online platforms.
                         </p>
                     </div>
                     <!-- /.comments -->
@@ -552,8 +552,8 @@
                     <!-- /.stay-time -->
 
                     <div class="comments" data-scroll-reveal="enter from the right after .5s">
-                        <p>Developing and maintaining web applications used on travel industry. Working with Codeigniter, Symfony framework and API-Platform.</p>
-                        <p>There I worked for only two big projects in travel industry. One was on Codeigniter, where I had the role of developer with principal role to maintain and add new features to a current application. And the second project was on Symfony (using API-Platform), with MySQL (as database) for backend, Node.js and React for frontend. On this project my role was as a PHP developer on the backend. The team consist on three backend developers, three frontend developers and one QA. My main job on this project was to implement new features, to polish them using the lastest version of Symfony (4 and 5), to document them, to test them with Postman and Newman (there I worked with typescript to create collections of tests to test entire api) and to discuss and help the frontend developers to link their application with the api.</p>
+                        <p>Developing and maintaining web applications for the travel industry, using CodeIgniter, Symfony framework, and API-Platform.</p>
+                        <p>I worked on two major projects in the travel industry. One project was on CodeIgniter, where I served as a developer responsible for maintaining and adding new features to an existing application. The second project utilized Symfony (with API-Platform) and MySQL for the backend, and Node.js and React for the frontend. In this project, I worked as a PHP developer on the backend. The team consisted of three backend developers, three frontend developers, and one QA. My primary responsibilities included implementing new features, refining them using the latest versions of Symfony (4 and 5), documenting and testing them with Postman and Newman (where I worked with TypeScript to create test collections for the entire API), and collaborating with frontend developers to integrate their applications with the API.</p>
                     </div>
                     <!-- /.comments -->
                 </div>
@@ -578,7 +578,7 @@
                     <!-- /.stay-time -->
 
                     <div class="comments" data-scroll-reveal="enter from the right after .5s">
-                        <p>Developing and maintaining web applications used on energy industry. My main role was to add new features to current application and to resolve different bugs. The application name is Joules and is an ERP system for sales and marketing processes specifically designed for the energy industry, more info regarding the application can be found on einsundnull.de/joules/en/ . There I worked in a team of more than ten PHP developers using Yii framework. My second role was to coordinate and help the junior developers and to review their code when was needed.</p>
+                        <p>Developing and maintaining web applications for the energy industry. My main role was to add new features to the current application and resolve various bugs. The application, named Joules, is an ERP system for sales and marketing processes specifically designed for the energy industry. More information about the application can be found at einsundnull.de/joules/en/. I worked in a team of more than ten PHP developers using the Yii framework. Additionally, I coordinated and assisted junior developers and reviewed their code when needed.</p>
                     </div>
                     <!-- /.comments -->
                 </div>
@@ -627,7 +627,7 @@
                     <!-- /.stay-time -->
 
                     <div class="comments" data-scroll-reveal="enter from the right after .5s">
-                        <p>We developed/maintained web applications, including web services. We developed a big commercial application for a telecom company using Zend Framework in combination with Ext.JS. As a secondary role, into the company, was to coordinate the juniors and help them to follow best practices and review their code.</p>
+                        <p>We developed and maintained web applications, including web services. We built a large commercial application for a telecom company using Zend Framework in combination with Ext.JS. Additionally, I played a secondary role in the company, where I coordinated junior developers, assisted them in following best practices, and reviewed their code.</p>
                     </div>
                     <!-- /.comments -->
                 </div>
@@ -747,8 +747,7 @@
                     <!-- /.stay-time -->
 
                     <div class="comments" data-scroll-reveal="enter from the right after .5s">
-                        <p>My main activity was FoxPro programming, training people how to use computers,
-                            installing operating systems, assisting on buying new computers, etc.</p>
+                        <p>My main activity was FoxPro programming, training people how to use computers, installing operating systems, assisting on buying new computers, etc.</p>
                     </div>
                     <!-- /.comments -->
                 </div>
